fixed a mistake about wrong position

--- a/style.css
+++ b/style.css
@@ -16,5 +16,5 @@ div.steps{
     color: brown;
 }
 img{
-    b    margin-bottom: 50px;
+   margin-bottom: 50px;
 }
